Fixed date field icon alignment

--- a/src/resources/css/blocks.scss
+++ b/src/resources/css/blocks.scss
@@ -498,7 +498,7 @@ textarea.text,
 .password.capslock:focus { background: #fff url(../images/capslock.png) no-repeat 100% 50%; }
 
 .datewrapper { position: relative; padding-right: 36px; width: 194px; }
-.datewrapper:before { position: absolute; top: 9px; left: 8px; content: "d"; color: #a1a4a6; }
+.datewrapper:before { position: absolute; top: 7px; left: 8px; content: "d"; color: #a1a4a6; }
 .datewrapper .text { padding-left: 27px; width: 100%; }
 
 /* redactor */
